--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -87,7 +87,7 @@
                             <ng-select
                               [class.disabledDev]="util.hasShowApplicationGroup('UPDATE_DEAL_DATA', roles) && this.applicationId"
                               [items]="operationType"
-                              (ngModelChange)="setApplicationFlagSort()"
+                              (change)="setApplicationFlagSort()"
                               [readonly]="this.applicationId"
                               [(ngModel)]="applicationForm.operationTypeId"
                               formControlName="operationTypeId"
@@ -569,7 +569,6 @@
                                     [items]="city"
                                     [(ngModel)]="applicationForm.cityId"
                                     formControlName="cityId"
-                                    [readonly]="true"
                                     bindValue="value"
                                     placeholder="{{ 'claim.city' | translate }}">
                                   </ng-select>
@@ -580,30 +579,30 @@
                                 <div *ngIf="f.cityId.errors.required" translate>claim.requiredField</div>
                               </div>
                             </div>
-                            <div class="col-sm"
-                                 [hidden]="util.hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO', roles) && util.hasShowRealPropertyGroup('VIEW_SALE_OBJECT_INFO', roles)"
-                                 *ngIf="isSell()">
-                              <label for="patronymic" translate>claim.street
-                                <span class="text-danger" *ngIf="!applicationForm.streetId">&nbsp;*</span>
-                              </label>
-                              <div class="row">
-                                <div class="col-sm-10">
-                                  <ng-select
-                                    [class.disabled]="util.hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO', roles)"
-                                    bindValue="value"
-                                    [items]="streets"
-                                    [(ngModel)]="applicationForm.streetId"
-                                    formControlName="streetId"
-                                    [readonly]="true"
-                                    placeholder="{{ 'claim.street' | translate }}">
-                                  </ng-select>
-                                </div>
-                              </div>
+<!--                            Пока убрал-->
+<!--                            <div class="col-sm"-->
+<!--                                 [hidden]="util.hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO', roles) && util.hasShowRealPropertyGroup('VIEW_SALE_OBJECT_INFO', roles)"-->
+<!--                                 *ngIf="isSell()">-->
+<!--                              <label for="patronymic" translate>claim.street-->
+<!--                                <span class="text-danger" *ngIf="!applicationForm.streetId">&nbsp;*</span>-->
+<!--                              </label>-->
+<!--                              <div class="row">-->
+<!--                                <div class="col-sm-10">-->
+<!--                                  <ng-select-->
+<!--                                    [class.disabled]="util.hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO', roles)"-->
+<!--                                    bindValue="value"-->
+<!--                                    [items]="streets"-->
+<!--                                    [(ngModel)]="applicationForm.streetId"-->
+<!--                                    formControlName="streetId"-->
+<!--                                    placeholder="{{ 'claim.street' | translate }}">-->
+<!--                                  </ng-select>-->
+<!--                                </div>-->
+<!--                              </div>-->
 
-                              <div *ngIf="f.streetId.touched && f.streetId.invalid" class="text-danger">
-                                <div *ngIf="f.streetId.errors.required" translate>claim.requiredField</div>
-                              </div>
-                            </div>
+<!--                              <div *ngIf="f.streetId.touched && f.streetId.invalid" class="text-danger">-->
+<!--                                <div *ngIf="f.streetId.errors.required" translate>claim.requiredField</div>-->
+<!--                              </div>-->
+<!--                            </div>-->
 
                           </div>
                           <div class="row">
