--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -543,7 +543,7 @@
                                          placeholder="Номер квартиры" maxlength="20"
                                          oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                          [(ngModel)]="applicationForm.apartmentNumber"
-                                         (input)="showModalChooseClaim()"
+                                         (change)="showModalChooseClaim()"
                                          formControlName="apartmentNumber"/>
                                 </div>
                               </div>
@@ -1052,7 +1052,7 @@
                                            util.hasShowRealPropertyGroup('UPDATE_PURCHASE_OBJECT_INFO', roles))"
                                            oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"/>
                                     <div class="input-group" *ngIf="isSell()">
-                                      <input type="text" class="form-control"
+                                      <input type="text" class="form-control" maxlength="10"
                                              placeholder="{{'patterns.from' | translate}}"
                                              oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                              (keypress)="util.keyPress($event)"
@@ -1194,7 +1194,7 @@
                             util.hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO', roles) &&
                             util.hasShowRealPropertyGroup('UPDATE_PURCHASE_OBJECT_INFO', roles)">
                             <div class="row" *ngIf="isApartment()">
-                              <fieldset class="scheduler-border col-sm-11">
+                              <fieldset class="scheduler-border col-sm-12">
                                 <legend class="scheduler-border" translate>claim.porch</legend>
                                 <div class="row">
                                   <div class="col-sm">
@@ -1225,7 +1225,7 @@
                               </fieldset>
                             </div>
                             <div class="row" *ngIf="isApartment()">
-                              <fieldset class="scheduler-border col-sm-11">
+                              <fieldset class="scheduler-border col-sm-12">
                                 <legend class="scheduler-border" translate>claim.territory</legend>
                                 <div class="row">
                                   <div class="col-sm">
@@ -1539,38 +1539,41 @@
 
 <ng-template #modalContent let-close="close">
   <div class="modal-header">
-    <h5 class="modal-title">Данный объект уже существует, вы согласны продолжить ?</h5>
-    <button type="button" class="close" (click)="close()">
+<!--    <h5 class="modal-title">Данный объект уже существует, вы согласны продолжить ?</h5>-->
+    <button type="button" class="close" (click)="closeModalContent()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
     <div class="row">
       <div class="col-sm">
-        <table class="table table-bordered table-sm">
-          <thead class="text-center">
-          <tr>
-            <th>ID заявки</th>
-            <th>Дата создания</th>
-            <th>ФИО агента</th>
-            <th>Цена (тг)</th>
-          </tr>
-          </thead>
-          <tbody style="cursor: pointer">
-          <tr *ngFor="let rpD of data.applicationByRealPropertyDtoList;let i = index">
-            <td>{{rpD.id}}</td>
-            <td>{{util.formatDate(rpD?.creationDate)}}</td>
-            <td>{{rpD?.agent}}</td>
-            <td>{{util.numberFormat(rpD?.objectPrice)}}</td>
-          </tr>
-          </tbody>
-        </table>
+        <p>
+          Действие ограничено! В системе имеется заявка с данным объектом недвижимости! Попробуйте ввести другой адрес.
+        </p>
+<!--        <table class="table table-bordered table-sm">-->
+<!--          <thead class="text-center">-->
+<!--          <tr>-->
+<!--            <th>ID заявки</th>-->
+<!--            <th>Дата создания</th>-->
+<!--            <th>ФИО агента</th>-->
+<!--            <th>Цена (тг)</th>-->
+<!--          </tr>-->
+<!--          </thead>-->
+<!--          <tbody style="cursor: pointer">-->
+<!--          <tr *ngFor="let rpD of data.applicationByRealPropertyDtoList;let i = index">-->
+<!--            <td>{{rpD.id}}</td>-->
+<!--            <td>{{util.formatDate(rpD?.creationDate)}}</td>-->
+<!--            <td>{{rpD?.agent}}</td>-->
+<!--            <td>{{util.numberFormat(rpD?.objectPrice)}}</td>-->
+<!--          </tr>-->
+<!--          </tbody>-->
+<!--        </table>-->
       </div>
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" (click)="close()" class="btn btn-outline-secondary btn2">Отмена</button>
-    <button type="button" (click)="onSuccess();close()" class="btn btn-outline-primary btn2">Ok</button>
+<!--    <button type="button" (click)="close()" class="btn btn-outline-secondary btn2">Отмена</button>-->
+    <button type="button"  (click)="closeModalContent()" class="btn btn-outline-primary btn-sm">Ok</button>
   </div>
 </ng-template>
 
