--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -159,7 +159,7 @@
               <td>{{getDicNameByLanguage(claim, 'objectType')}}</td>
               <td>{{formatDate(claim)}}</td>
               <td>{{claim.fullname}}</td>
-              <td><span>{{claim.phone | mask: '+0 (000) 000-0000'}}</span></td>
+              <td><span>+7{{claim.phone | mask: ' (000) 000-0000'}}</span></td>
             </tr>
             </tbody>
           </table>
