--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1533,7 +1533,7 @@
 
       </div>
       <div class="tab-pane fade" id="contractOU" role="tabpanel" aria-labelledby="contractOU-tab">
-        2
+        <app-contract-ou></app-contract-ou>
       </div>
       <div class="tab-pane fade" id="impressions" role="tabpanel" aria-labelledby="impressions-tab">
         <app-claim-events></app-claim-events>
