--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1520,8 +1520,7 @@
                       [disabled]="!this.applicationForm?.operationTypeId && !this.applicationForm?.objectTypeId">
                 <span class="fa fa-save" translate> patterns.save</span>
               </button>
-              <button type="button" class="btn btn-success btn2 float-right btn-sm" *ngIf="edit" translate
-                (click)="generateContract()">
+              <button type="button" class="btn btn-success btn2 float-right btn-sm" *ngIf="edit" translate>
                 claim.generateContract
               </button>
               <button type="button" (click)="cancel()" class="btn btn-default btn2 float-right btn-sm" translate>
