--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1520,10 +1520,10 @@
                       [disabled]="!this.applicationForm?.operationTypeId && !this.applicationForm?.objectTypeId">
                 <span class="fa fa-save" translate> patterns.save</span>
               </button>
-              <button type="button" class="btn btn-success btn2 float-right btn-sm" *ngIf="edit" translate
+<!--              <button type="button" class="btn btn-success btn2 float-right btn-sm" *ngIf="edit" translate-->
 <!--                (click)="generateContract()">-->
-                claim.generateContract
-              </button>
+<!--                claim.generateContract-->
+<!--              </button>-->
               <button type="button" (click)="cancel()" class="btn btn-default btn2 float-right btn-sm" translate>
                 patterns.cancel
               </button>
