--- a/frontend/src/app/components/claims/create-claim/contract-ou/contract-ou.component.html
+++ b/frontend/src/app/components/claims/create-claim/contract-ou/contract-ou.component.html
@@ -77,16 +77,9 @@
   <div>
     <div class="actions mb-3">
       <button type="button" class="btn btn-primary" (click)="generateContract()">Сформировать договор</button>
-      <button type="button" class="btn btn-light" (click)="skipStep()">Пропустить шаг</button>
+      <button type="button" class="btn btn-light" (click)="skipStep()" [disabled]="isDisabled">Пропустить шаг</button>
 <!--      <button type="button" class="btn btn-success" disabled>Распечатать</button>-->
       <button type="button" class="btn btn-light" (click)="cancel()">Отменить</button>
     </div>
-    <ng-container *ngIf="sourcePdf">
-      <pdf-viewer
-        [src]="sourcePdf"
-        [render-text]="true"
-        style="display: block;border: 1px solid;height: 100vh;overflow: auto;width: 80%;"
-      ></pdf-viewer>
-    </ng-container>
   </div>
 </div>
