--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
           <div class="row">
             <div class="col-sm">
               <div class="form-group row">
-                <label for="surName" class="col-sm-4 col-form-label" translate>Агентсике договора</label>
+                <label for="surName" class="col-sm-4 col-form-label" translate>Агентские договора</label>
                 <div class="col-sm">
                   <input type="text" class="form-control" readonly [value]="2500000"/>
                 </div>
