--- a/frontend/src/app/components/profile/my-claims/my-claims.component.html
+++ b/frontend/src/app/components/profile/my-claims/my-claims.component.html
@@ -36,7 +36,7 @@
         <td>{{getDicNameByLanguage(claim, 'operationType')}}</td>
         <!--<td>{{formatDate(claim)}}</td>-->
         <td>{{claim.fullname}}</td>
-        <td><span>{{claim.phone | mask: '+0 (000) 000-0000'}}</span></td>
+        <td><span>+7{{claim.phone | mask: ' (000) 000-0000'}}</span></td>
         <td>{{claim.email}}</td>
         <td>{{getDicNameByLanguage(claim, 'district')}}</td>
         <td>{{claim.numberOfRooms}}</td>
