--- a/frontend/src/app/components/profile/my-clients/client-card/client-card.component.html
+++ b/frontend/src/app/components/profile/my-clients/client-card/client-card.component.html
@@ -66,7 +66,7 @@
               <div class="col-sm-8">
                 <div class="input-group">
                   <input type="text" class="form-control" placeholder="Телефон" id="addPhone" [disabled]="true"
-                         [(ngModel)]="obj.phoneNumber" prefix="+7" mask="(000) 000 00 00" [showMaskTyped]="true" >
+                         [(ngModel)]="obj.phoneNumber" prefix="+7" mask=" (000) 000 00 00" [showMaskTyped]="true" >
                 </div>
               </div>
             </div>
@@ -102,7 +102,7 @@
               </td>
               <td>{{getDicNameByLanguage(claim, 'operationType')}}</td>
               <td>{{claim.fullname}}</td>
-              <td><span>{{claim.phone | mask: '+0 (000) 000-0000'}}</span></td>
+              <td><span>+7{{claim.phone | mask: ' (000) 000-0000'}}</span></td>
               <td>{{claim.email}}</td>
               <td>{{getDicNameByLanguage(claim, 'district')}}</td>
               <td>{{claim.numberOfRooms}}</td>
