--- a/frontend/src/app/components/board/board.component.html
+++ b/frontend/src/app/components/board/board.component.html
@@ -22,12 +22,12 @@
       <li class="nav-item">
         <a class="nav-link" [ngClass]="activeTab == 2 ? 'active' : ''" id="profile-tab" data-toggle="tab"
            href="#profile" role="tab" aria-controls="profile"
-           aria-selected="false" (click)="sortStatusesDic(2)" translate>board.sellBoard</a>
+           aria-selected="false" (click)="sortStatusesDic(2)">Воронка продаж</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [ngClass]="activeTab == 1 ? 'active' : ''" id="contact-tab" data-toggle="tab"
            href="#contact" role="tab" aria-controls="contact"
-           aria-selected="false" (click)="sortStatusesDic(1)" translate>board.buyerBoard</a>
+           aria-selected="false" (click)="sortStatusesDic(1)">Воронка покупателей</a>
       </li>
     </ul>
     <div class="text-center" style="font-size: 18px">
