--- a/frontend/src/app/components/claims/create-claim/claim-events/claim-events.component.scss
+++ b/frontend/src/app/components/claims/create-claim/claim-events/claim-events.component.scss
@@ -2,3 +2,8 @@
   border-top: 1px dashed black;
 }
 
+textarea, textarea:focus {
+  border: none;
+  outline: none !important;
+  border-bottom: 1px solid black;
+}
