--- a/frontend/src/app/components/claims/create-claim/claim-events/claim-events.component.html
+++ b/frontend/src/app/components/claims/create-claim/claim-events/claim-events.component.html
@@ -18,11 +18,11 @@
         </div>
         <div class="col-sm">
           <label for="form7">Описание события</label>
-          <textarea class="form-control" formControlName="description" rows="1"></textarea>
+          <textarea class="col-sm-12 control" rows="2" formControlName="description"></textarea>
         </div>
         <div class="col-sm" *ngIf="eventsForm.value.eventTypeId == 1">
           <label for="form7">ID заявки - {{this.applicationId}}</label>
-          <textarea id="form7" class="form-control" rows="1" readonly></textarea>
+          <textarea id="form7" class="col-sm-12 control" rows="2" readonly></textarea>
         </div>
       </div>
       <br/>
@@ -37,7 +37,7 @@
         </div>
         <div class="col-sm">
           <label for="form7">Комментарий</label>
-          <textarea class="form-control" formControlName="comment" rows="1"></textarea>
+          <textarea class="col-sm-12 control" rows="2" formControlName="comment"></textarea>
         </div>
       </div>
     </div>
@@ -71,42 +71,54 @@
             </div>
             <div class="col-sm" [class.disabledDev]="events.disabledDev">
               <label for="form7">Описание события</label>
-              <textarea class="form-control" [value]="events.description" rows="1"></textarea>
+              <textarea class="col-sm-12 control" rows="2" [(ngModel)]="events.description"></textarea>
             </div>
             <div class="col-sm" *ngIf="events?.eventType?.id == 1" [class.disabledDev]="events.disabledDev">
               <label for="form7">ID заявки - {{this.applicationId}}</label>
-              <textarea class="form-control" rows="1" readonly></textarea>
+              <textarea class="col-sm-12 control" rows="1" readonly></textarea>
             </div>
-            <div class="col-sm-1">
+            <div class="col-sm-2">
               <div class="row">
-                <button type="button" (click)="deleteEvent(events?.eventId)" class="btn btn-danger">
-                  <i class="fa fa-trash" aria-hidden="true"></i>
-                </button>
-              </div>
-              <br/>
-              <div class="row">
-                <button type="button" (click)="editEvent(events)" class="btn btn-light">
-                  <i class="fa fa-pencil" aria-hidden="true"></i>
-                </button>
+                <div class="col-sm>">
+                  <button type="button" (click)="deleteEvent(events?.eventId)" class="btn btn-danger">
+                    <i class="fa fa-trash" aria-hidden="true"></i>
+                  </button>
+                </div>
+                <div class="col-sm>">
+                  <button type="button" (click)="editEvent(events)" class="btn btn-primary">
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-          <div class="row" [class.disabledDev]="events.disabledDev">
-            <div class="col-sm-2">
+          <div class="row">
+            <div class="col-sm-2" [class.disabledDev]="events.disabledDev">
               <label translate>Дата и Время:</label>
               <input type="text" [(ngModel)]="events.eventDate" class="form-control"
                      bsDatepicker #ru="bsDatepicker"/>
             </div>
-            <div class="col-sm-2" style="margin: -7px;">
+            <div class="col-sm-2" style="margin: -7px;" [class.disabledDev]="events.disabledDev">
               <ngb-timepicker [(ngModel)]="events.time"></ngb-timepicker>
             </div>
             <div class="col-sm">
-              <label for="form7">Комментарий</label>
-              <textarea class="form-control" [value]="events.comment" rows="1"></textarea>
+              <div class="row">
+                <div class="col-sm-10" [class.disabledDev]="events.disabledDevComment">
+                  <label>Комментарий</label>
+                  <div class="input-group">
+                    <textarea class="col-sm-12 control" rows="2" [(ngModel)]="events.comment"></textarea>
+                  </div>
+                </div>
+                <div class="col-sm">
+                  <button type="button" (click)="editEventComment(events)" class="btn btn-light">
+                    <i class="fa fa-pencil" aria-hidden="true">Редактировать комментарий</i>
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="row" *ngIf="!events.disabledDev">
+        <div class="row" *ngIf="!events.disabledDev || !events.disabledDevComment">
           <button type="button" class="btn btn-btn btn2 btn-secondary" (click)="this.changeDisableDev(events, true)">Отмена</button>
           <button type="button" class="btn btn-btn btn2 btn-success" (click)="update(events)">
             Сохранить
